[package]
name = "website"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"]  }
serde_derive = "1.0"
comrak = "0.4"
regex = "0.2"
lazy_static = "1.2"
chrono = "0.4"
rss = "1.0"
serde_json = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates"]
